--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,22 +1,51 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap");
+
 body {
   margin: 0;
   background-color: #f7f7f7;
+  font-family: "Poppins", sans-serif;
 }
 
 .App {
   display: flex;
+  position: relative;
+  overflow: hidden;
+  margin: auto;
   margin-top: 0;
   max-width: 600px;
   min-height: 100vh;
-  margin: auto;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
+}
+
+section {
+  width: 100%;
+  position: relative;
+  z-index: 2;
 }
 
 .container {
   margin-left: 5%;
   margin-right: 5%;
+  margin-top: 0;
+  top: 0;
+}
 
-  width: 100%;
-  background-color: red;
+.heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 50px;
+}
+
+.title {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+/*pokemon logo overlay*/
+.pokemon-logo {
+  position: absolute;
+  z-index: 1;
+  width: 250px;
 }
