--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -35,12 +35,30 @@ section {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 50px;
+  min-height: 95px;
 }
 
 .title {
   font-size: 30px;
   font-weight: 700;
+}
+
+.back {
+  height: 15px;
+  cursor: pointer;
+}
+
+.love {
+  height: 30px;
+  cursor: pointer;
+}
+
+.flex {
+  display: flex;
+}
+
+.column {
+  flex-direction: column;
 }
 
 /*pokemon logo overlay*/
