--- a/src/pages/PokemonList/index.css
+++ b/src/pages/PokemonList/index.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-wrap: wrap;
   margin: auto;
-  justify-content: space-around;
+  align-content: stretch;
   margin-bottom: 10px;
 }
 
